# Event-Horizon

./: .gitignore  README.md  pyproject.toml
fixtures/: events.json  news.json  prices.json
output/: playbook_1.yaml  playbook_10.yaml  playbook_11.yaml  playbook_12.yaml  playbook_2.yaml  playbook_3.yaml  playbook_4.yaml  playbook_5.yaml  playbook_6.yaml  playbook_7.yaml  playbook_8.yaml  playbook_9.yaml
src/: __init__.py  __main__.py  backtest.py  classifier.py  data_ingress.py  emitter.py  models.py  playbook.py  reaction_engine.py
src/fixtures/: __init__.py  loader.py
tests/: conftest.py  test_backtest.py  test_classifier.py  test_cli.py  test_data_ingress.py  test_emitter.py  test_fixture_loader.py  test_integration.py  test_playbook.py  test_reaction_engine.py
